FuffrBox: corrected offline page demos list contents vertical alignment.

--- a/FuffrBox/www/common.css
+++ b/FuffrBox/www/common.css
@@ -133,20 +133,26 @@ p.header-description {
 #demos-list ul {
 	display: inline;
 	list-style: none;
-	white-space: nowrap;
-	line-height: 0;
+
 	height: 100%;
 	margin: 0;
 	padding: 0;
+
+	white-space: nowrap;
+	line-height: 0;
+	vertical-align: top;
 }
 
 #demos-list li {
 	display: inline-block;
+	
 	width: 100%;
 	height: 100%;
 	margin: 0;
 	padding: 0;
+
 	line-height: 100%;
+	vertical-align: top;
 }
 
 #demos-list a {
